# distributed-system-for-mobile-agents-coordination

./: .cproject  .project  CMakeCache.txt  EclipseSVN.md  Makefile  ProjectHome.md  cmake_install.cmake
AgentCom/: AgentCom-component.cpp  AgentCom-component.hpp  CMakeLists.txt  Makefile  manifest.xml  moc_Spectator-component.cxx  ui_scenewindow.h  ui_simulationwindow.h
AgentCom/__/interfejs/: moc_mainwindow.cxx  moc_viewscene.cxx
AgentCom/__/src/: moc_agentwindow.cxx  moc_scenewindow.cxx
FIFOserv/: FIFOserv.cpp
Spectator_src/: Spect.cpp  cmake_install.cmake
branches/Agent/: .project  Makefile
branches/Agent/docs/html/: Agent_8cpp.html  Agent_8hh.html  Clock_8cpp.html  Clock_8cpp__incl.dot  Clock_8hh.html  Clock_8hh__dep__incl.md5  Clock_8hh_source.html  Coordinates_8cpp__incl.md5  Coordinates_8cpp_source.html  Coordinates_8hh_source.html  GnuplotInc_8cpp.html  GnuplotInc_8cpp__incl.dot  GnuplotInc_8cpp_a40b05327fdd4cc6c39c5fc29b82c2b08_cgraph.dot  GnuplotInc_8cpp_a40b05327fdd4cc6c39c5fc29b82c2b08_cgraph.md5  GnuplotInc_8cpp_source.html  GnuplotInc_8hh.html  GnuplotInc_8hh__dep__incl.dot  GnuplotInc_8hh__dep__incl.md5  GnuplotInc_8hh_a60ad3ed0cfef98900830ca6197e33cb2_cgraph.md5  GnuplotInc_8hh_source.html  Segment_8cpp_source.html  Segment_8hh.html  Segment_8hh__dep__incl.dot  Segment_8hh__incl.dot  Segment_8hh__incl.md5  Segment_8hh_source.html  annotated.html  classAgent.html  classAgent_a141897370601ada8da1358b303d2e1e7_cgraph.dot  classAgent_a141897370601ada8da1358b303d2e1e7_cgraph.md5  classAgent_a2a709195dc58a13aecee4b5639c3875b_cgraph.md5  classAgent_a51bc5c497653779725fc4c2f6dfee888_cgraph.dot  classAgent_a51bc5c497653779725fc4c2f6dfee888_cgraph.md5  classAgent_a80e144d0fd78f8e1a54abf92158448e1_cgraph.dot  classAgent_a80e144d0fd78f8e1a54abf92158448e1_cgraph.md5  classClock.html  classCoordinates.html  classSegment.html  dir_ea6d7edaf73c9bd1c81d51f5bfe68d38.html  dir_ea6d7edaf73c9bd1c81d51f5bfe68d38_dep.md5  (+18 more)
branches/Agent/docs/html/search/: all_5f.html  all_63.html  all_66.html  all_6e.html  all_70.html  all_73.html  all_74.html  classes_61.html  defines_70.html  enumvalues_77.html  (+8 more)
branches/Agent/src/: Agent.cpp  Agent.hh  Clock.hh  Coordinates.cpp  Coordinates.hh  GnuplotInc.cpp  GnuplotInc.hh  Segment.hh  main.cpp
branches/Grafika/: .cproject  .project
branches/Grafika/src/: main.hh
branches/Interakcja/: GenDoc.doxy
branches/Interakcja/src/: Agent.cpp  Agent.hh  Segment.cpp  test.cpp
branches/Komunikacja/: CMakeLists.txt
branches/Komunikacja/AgentCom/: AgentCom-component.cpp  Spectator-component.hpp
branches/Komunikacja/Spectator_src/: CMakeLists.txt
branches/Komunikacja/src/: Agent.hh  CMakeLists.txt  Clock.cpp
branches/Plansza/: .project
branches/Plansza/src/: Plansza.cpp  Spectator-component.hpp
branches/Symulator/: .project
docs/: agent.dia
docs/html/: Agent_8cpp__incl.dot  Agent_8cpp__incl.md5  Agent_8cpp_source.html  Agent_8hh__dep__incl.dot  Agent_8hh__dep__incl.md5  Agent_8hh__incl.dot  Agent_8hh__incl.md5  Agent_8hh_source.html  Clock_8cpp.html  Clock_8cpp__incl.md5  Clock_8cpp_source.html  Clock_8hh.html  Clock_8hh__dep__incl.dot  Clock_8hh_source.html  Coordinates_8cpp.html  Coordinates_8cpp__incl.dot  Coordinates_8hh.html  Coordinates_8hh__dep__incl.dot  Coordinates_8hh__dep__incl.md5  Coordinates_8hh_source.html  GnuplotInc_8cpp.html  GnuplotInc_8cpp__incl.md5  GnuplotInc_8cpp_a60ad3ed0cfef98900830ca6197e33cb2_cgraph.dot  GnuplotInc_8cpp_source.html  GnuplotInc_8hh.html  GnuplotInc_8hh__incl.dot  GnuplotInc_8hh__incl.md5  GnuplotInc_8hh_a561196655bce7044165f5d05d38b3188_cgraph.dot  GnuplotInc_8hh_a561196655bce7044165f5d05d38b3188_cgraph.md5  Segment_8cpp.html  Segment_8cpp__incl.dot  Segment_8cpp__incl.md5  Segment_8hh__dep__incl.md5  Segment_8hh_source.html  annotated.html  classAgent.html  classAgent__coll__graph.dot  classAgent__coll__graph.md5  classAgent_a141897370601ada8da1358b303d2e1e7_cgraph.dot  classAgent_a141897370601ada8da1358b303d2e1e7_cgraph.md5  (+33 more)
docs/html/search/: all_61.html  all_62.html  all_67.html  all_6c.html  all_6d.html  all_72.html  classes_63.html  classes_73.html  defines_66.html  defines_69.html  defines_6d.html  enums_66.html  enums_73.html  enumvalues_65.html  enumvalues_6c.html  enumvalues_6d.html  enumvalues_70.html  files_61.html  files_63.html  files_6d.html  files_73.html  functions_61.html  functions_63.html  functions_64.html  functions_67.html  functions_6f.html
interfejs/: Plansza.hh  Spectator-component.cpp  scenewindow.h  simulationwindow.h  viewscene.cpp  viewscene.h
nienazwany/: agentwindow.cpp  agentwindow.h  common.h  mainwindow.cpp  nienazwany.pro  scenewindow.cpp  viewscene.cpp  viewscene.h
nienazwany2/: agentwindow.h  common.h  mainwindow.h  mainwindow.ui  scenewindow.cpp  simulationwindow.cpp  viewscene.h
src/: Agent.cpp  Agent.hh  AgentBase.hh  Clock.cpp  Clock.hh  Common.cpp  Common.hh  Coordinates.cpp  Coordinates.hh  GnuplotInc.cpp  GnuplotInc.hh  Plansza.cpp  Segment.cpp  Segment.hh  cmake_install.cmake  main.cpp  main.hh  test.cpp  test.hh
trunk/: Makefile
trunk/AgentCom/: .tb_history  AgentCom-component.hpp  CMakeCache.txt  CMakeLists.txt  Spectator-component.cpp  Spectator-component.hpp  cmake_install.cmake  ui_agentwindow.h  ui_mainwindow.h
trunk/AgentCom/__/interfejs/: moc_agentwindow.cxx  moc_scenewindow.cxx  moc_simulationwindow.cxx
trunk/AgentCom/__/src/: moc_mainwindow.cxx  moc_simulationwindow.cxx  moc_viewscene.cxx
trunk/Spectator_src/: Makefile  Spect.hh  SpectBase.hh
trunk/interfejs/: Clock.hh  Plansza.cpp  agentwindow.cpp  agentwindow.h  agentwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  scenewindow.cpp  scenewindow.ui  simulationwindow.cpp  simulationwindow.ui
trunk/nienazwany/: agentwindow.ui  simulationwindow.cpp  simulationwindow.h
trunk/nienazwany2/: agentwindow.cpp  agentwindow.ui  mainwindow.cpp  scenewindow.h  scenewindow.ui  simulationwindow.h  simulationwindow.ui  viewscene.cpp
trunk/src/: Agent.cpp  AgentBase.hh  Makefile  cmake_install.cmake  common.h  main.cpp
wiki/: EclipseSVN.wiki  PageName.wiki
